Fix contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,16 @@ All colors MUST be HSL.
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
 
-    --primary: 197 71% 52%;
+    --primary: 197 71% 42%;
     --primary-foreground: 0 0% 100%;
 
-    --secondary: 27 87% 67%;
-    --secondary-foreground: 0 0% 0%;
+    --secondary: 27 87% 45%;
+    --secondary-foreground: 0 0% 100%;
 
     --muted: 220 14% 96%;
-    --muted-foreground: 220 9% 46%;
+    --muted-foreground: 220 9% 40%;
 
-    --accent: 351 95% 71%;
+    --accent: 351 95% 48%;
     --accent-foreground: 0 0% 100%;
 
     --destructive: 0 84.2% 60.2%;
